bug fix in get_features_by_ID

--- a/train.ipynb
+++ b/train.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -349,8 +349,7 @@
      "output_type": "stream",
      "text": [
       "10 global res_blocks\n",
-      "7 local res_blocks\n",
-      "setting dense model NOT trainable\n"
+      "7 local res_blocks\n"
      ]
     }
    ],
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -376,46 +375,46 @@
       "Train on 25493 samples, validate on 2833 samples\n",
       "Set Learning Rate: 0.0008\n",
       "Epoch 1/15\n",
-      "25493/25493 [==============================] - 15s 594us/sample - loss: 0.2967 - acc: 0.9130 - val_loss: 0.2061 - val_acc: 0.9403\n",
+      "25493/25493 [==============================] - 13s 491us/sample - loss: 0.3823 - acc: 0.8938 - val_loss: 0.3630 - val_acc: 0.8987\n",
       "Epoch 2/15\n",
-      "25493/25493 [==============================] - 10s 377us/sample - loss: 0.1807 - acc: 0.9455 - val_loss: 0.1953 - val_acc: 0.9421\n",
+      "25493/25493 [==============================] - 9s 357us/sample - loss: 0.2748 - acc: 0.9236 - val_loss: 0.2557 - val_acc: 0.9276\n",
       "Epoch 3/15\n",
-      "25493/25493 [==============================] - 10s 379us/sample - loss: 0.1616 - acc: 0.9506 - val_loss: 0.1587 - val_acc: 0.9552\n",
+      "25493/25493 [==============================] - 9s 359us/sample - loss: 0.2420 - acc: 0.9337 - val_loss: 0.2469 - val_acc: 0.9287\n",
       "Epoch 4/15\n",
-      "25493/25493 [==============================] - 10s 376us/sample - loss: 0.1516 - acc: 0.9516 - val_loss: 0.1645 - val_acc: 0.9463\n",
+      "25493/25493 [==============================] - 9s 358us/sample - loss: 0.2257 - acc: 0.9361 - val_loss: 0.2281 - val_acc: 0.9340\n",
       "Epoch 5/15\n",
-      "25493/25493 [==============================] - 10s 376us/sample - loss: 0.1459 - acc: 0.9525 - val_loss: 0.1519 - val_acc: 0.9534\n",
+      "25493/25493 [==============================] - 9s 358us/sample - loss: 0.2098 - acc: 0.9401 - val_loss: 0.2317 - val_acc: 0.9312\n",
       "Set Learning Rate: 4e-05\n",
       "Epoch 6/15\n",
-      "25493/25493 [==============================] - 10s 376us/sample - loss: 0.1367 - acc: 0.9567 - val_loss: 0.1471 - val_acc: 0.9569\n",
+      "25493/25493 [==============================] - 9s 359us/sample - loss: 0.1822 - acc: 0.9508 - val_loss: 0.2199 - val_acc: 0.9372\n",
       "Epoch 7/15\n",
-      "25493/25493 [==============================] - 10s 379us/sample - loss: 0.1361 - acc: 0.9572 - val_loss: 0.1473 - val_acc: 0.9569\n",
+      "25493/25493 [==============================] - 9s 359us/sample - loss: 0.1765 - acc: 0.9528 - val_loss: 0.2206 - val_acc: 0.9365\n",
       "Epoch 8/15\n",
-      "25493/25493 [==============================] - 10s 376us/sample - loss: 0.1344 - acc: 0.9563 - val_loss: 0.1478 - val_acc: 0.9555\n",
+      "25493/25493 [==============================] - 9s 360us/sample - loss: 0.1728 - acc: 0.9546 - val_loss: 0.2179 - val_acc: 0.9396\n",
       "Epoch 9/15\n",
-      "25493/25493 [==============================] - 10s 378us/sample - loss: 0.1327 - acc: 0.9574 - val_loss: 0.1464 - val_acc: 0.9573\n",
+      "25493/25493 [==============================] - 9s 360us/sample - loss: 0.1694 - acc: 0.9562 - val_loss: 0.2166 - val_acc: 0.9379\n",
       "Epoch 10/15\n",
-      "25493/25493 [==============================] - 10s 378us/sample - loss: 0.1303 - acc: 0.9578 - val_loss: 0.1472 - val_acc: 0.9576\n",
+      "25493/25493 [==============================] - 9s 360us/sample - loss: 0.1661 - acc: 0.9571 - val_loss: 0.2158 - val_acc: 0.9396\n",
       "Set Learning Rate: 2e-05\n",
       "Epoch 11/15\n",
-      "25493/25493 [==============================] - 10s 379us/sample - loss: 0.1296 - acc: 0.9579 - val_loss: 0.1466 - val_acc: 0.9566\n",
+      "25493/25493 [==============================] - 9s 360us/sample - loss: 0.1623 - acc: 0.9589 - val_loss: 0.2187 - val_acc: 0.9358\n",
       "Epoch 12/15\n",
-      "25493/25493 [==============================] - 10s 375us/sample - loss: 0.1318 - acc: 0.9582 - val_loss: 0.1471 - val_acc: 0.9562\n",
+      "25493/25493 [==============================] - 9s 360us/sample - loss: 0.1606 - acc: 0.9594 - val_loss: 0.2183 - val_acc: 0.9379\n",
       "Epoch 13/15\n",
-      "25493/25493 [==============================] - 10s 378us/sample - loss: 0.1312 - acc: 0.9583 - val_loss: 0.1468 - val_acc: 0.9559\n",
+      "25493/25493 [==============================] - 9s 358us/sample - loss: 0.1587 - acc: 0.9603 - val_loss: 0.2202 - val_acc: 0.9351\n",
       "Epoch 14/15\n",
-      "25493/25493 [==============================] - 10s 380us/sample - loss: 0.1293 - acc: 0.9584 - val_loss: 0.1470 - val_acc: 0.9566\n",
+      "25493/25493 [==============================] - 9s 360us/sample - loss: 0.1574 - acc: 0.9609 - val_loss: 0.2206 - val_acc: 0.9365\n",
       "Epoch 15/15\n",
-      "25493/25493 [==============================] - 10s 379us/sample - loss: 0.1303 - acc: 0.9582 - val_loss: 0.1466 - val_acc: 0.9566\n"
+      "25493/25493 [==============================] - 9s 361us/sample - loss: 0.1557 - acc: 0.9617 - val_loss: 0.2199 - val_acc: 0.9379\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1e370b6eef0>"
+       "<tensorflow.python.keras.callbacks.History at 0x1e38681cd30>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +425,7 @@
     "mycallback = LowerLr([5,5,5],[0.8e-3, 0.4e-4, 0.2e-4])\n",
     "\n",
     "# (g_train_x, g_val_x), (l_train_x, l_val_x ), (train_y, val_y) = next(spliter)\n",
-    "m.fit([aug_g_x, aug_l_x, aug_features], aug_y, epochs=15, batch_size=128, \n",
+    "m.fit([aug_g_x, aug_l_x], aug_y, epochs=15, batch_size=128, \n",
     "         validation_split=0.1, callbacks=[mycallback], verbose=1)"
    ]
   },
@@ -487,25 +486,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1574/1574 [==============================] - 1s 341us/sample - loss: 0.1489 - acc: 0.9587\n",
-      "1574/1574 [==============================] - 0s 95us/sample - loss: 0.1955 - acc: 0.9231\n",
-      "saving to C:\\Users\\User\\dev\\kepler\\models\\train.h5\n",
-      "finished saving\n"
+      "1574/1574 [==============================] - 1s 347us/sample - loss: 0.1960 - acc: 0.9479\n",
+      "1574/1574 [==============================] - 0s 102us/sample - loss: 0.1955 - acc: 0.9231\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.19551443415569683, 0.9231258]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# m = load_model()\n",
-    "m.evaluate([g_test_x, l_test_x,test_features], test_y)\n",
+    "m.evaluate([g_test_x, l_test_x], test_y)\n",
     "dense.evaluate(test_features, test_y)\n",
-    "save_model(m)\n",
+    "# save_model(m)\n",
     "# save_model(dense, path=\"./models/dense.h5\")\n",
     "# save_train_test_data(\"C:/Users/User/dev/data/best/\", *(g_train_x, l_train_x, train_y), *(g_test_x, l_test_x, test_y) )"
    ]
